--- a/src/assets/scss/page/member.scss
+++ b/src/assets/scss/page/member.scss
@@ -264,6 +264,7 @@
           flex-direction: column;
           align-items: flex-end;
           justify-content: space-evenly;
+          color: $mainTextColor;
           @media (width <= 768px) {
           }
         }
@@ -274,6 +275,7 @@
           flex-direction: column;
           align-items: center;
           justify-content: space-evenly;
+          color: $mainTextColor;
           @media (width <= 768px) {
             align-items: flex-start;
             margin-left: 20px;
