--- a/src/assets/scss/page/news.scss
+++ b/src/assets/scss/page/news.scss
@@ -78,6 +78,7 @@
         flex-direction: column;
         padding-top: 0;
         .news_select{
+            z-index: 999;
             display: block;
             margin-top: 6.25vw;
 
