--- a/src/assets/scss/page/animal.scss
+++ b/src/assets/scss/page/animal.scss
@@ -40,12 +40,13 @@
 }
 .animal-lightBox{
     position: fixed;
-    z-index: 12;
+    backdrop-filter: blur(5px);
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index: 1000;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
+    height: 100%;    
     display: flex;
     justify-content: center;
     .animal-hint{
@@ -105,6 +106,7 @@
                 span{
                     padding: 0 2vw;
                     img{
+                        padding: 0 1vw;
                         vertical-align: middle;
                     }
                 }
@@ -207,12 +209,7 @@
 
 
 }
-@media screen and (max-width: 414px) {
-    .animal_select{
-        top: 6.1%;
-    }
 
-}
 
 
 //menu-tree動物詳細頁面
@@ -236,6 +233,7 @@
             align-items: center;
             width: 13.6vw;
             height: auto;
+            overflow: hidden;
             background-color: $bgColorSecGray;
             color: $mainTextColor;
         @media (max-width:768px) {
@@ -249,6 +247,7 @@
             color: $primaryColorGreen;
             }
         }
+
         .main_select{
             padding: 1.6vh 0;
             width: 80%;
@@ -294,7 +293,6 @@
     //次選
     .animaldetail_sub_menu{
         width: 100%;
-
         li{
             height: 3vw; 
             border-top: $bgColorLightgray solid 0.2vw;
@@ -305,9 +303,13 @@
                 padding: 0.7vw 0;
                 background-color:$inputTextColor;
                 color: $mainTextColor;
+                &:hover {
+                    color: $primaryColorGreen;
+                }
             }
-        }        
+        }    
     }
+
 
 //各區背景
 section.grassland{
