--- a/src/assets/scss/page/home.scss
+++ b/src/assets/scss/page/home.scss
@@ -79,13 +79,23 @@
       // max-width: 100%;
       // overflow: hidden;
 
+      &_box {
+        height: 100vh;
+        position: relative;
+        overflow: hidden;
+      }
       &_img {
+        position: absolute;
+        top:0;
+        transition: 0.5s ease-in-out;
+        width: 100vw;
+
         display: flex;
         justify-content: center;
         align-items: center;
         height: 100vh;
-        position: relative;
-        max-width: 100%;
+        // position: relative;
+        // max-width: 100%;
         overflow: hidden;
         background-size: cover;
         background-position: center center;
