URL 參數功能新增

--- a/src/assets/scss/page/park.scss
+++ b/src/assets/scss/page/park.scss
@@ -549,6 +549,9 @@ $time:10s;
             }
         }
         .pk_Animal_details-text{  
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             p{
                 font-size: 24px;
                 @media (max-width:480px) {    
