--- a/src/assets/scss/page/park.scss
+++ b/src/assets/scss/page/park.scss
@@ -501,7 +501,7 @@ $time:10s;
         background-size:100% auto;
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: space-evenly;
         align-items: center;
         gap: 0.5%;
         @media (max-width:768px) {
