update park to animalDetail url

--- a/src/assets/scss/page/animal.scss
+++ b/src/assets/scss/page/animal.scss
@@ -485,8 +485,12 @@ section.aqua{
         }
         .animal_detail_sec-section{
             display: flex;
+            // justify-content: space-between;
             .animal_detail_name{
-                padding-right: 10.4vw;
+                width: 50%;
+            }
+            .animal_detail_life{
+                justify-items: flex-end;
             }
         }
         
