--- a/src/assets/scss/layout/_login_light_box.scss
+++ b/src/assets/scss/layout/_login_light_box.scss
@@ -1,3 +1,11 @@
+.memLightBox_bg{
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px);
+  position: absolute;
+  z-index: 9999;
+}
 .memLightBox {
   position: relative;
   margin: 100px auto;
@@ -24,8 +32,10 @@
       color: $mainTextColor;
       margin-top: 1vw;
       letter-spacing: 2px;
+      z-index: 9;
     }
     .closeIcon {
+      cursor: pointer;
       width: 30px;
       height: 30px;
       position: absolute;
