--- a/src/assets/scss/page/member.scss
+++ b/src/assets/scss/page/member.scss
@@ -201,6 +201,7 @@
             margin-left: 5px;
             height: 35px;
             width: 250px;
+            padding: 5px;
             @media (width <= 768px) {
               width: 205px;
               height: 30px;
@@ -248,42 +249,51 @@
         @include defaultMemH2();
       }
       .buyHistory {
+        overflow: auto;
+        // border: 2px solid violet;
         display: flex;
-        border-bottom: 2px solid black;
+        flex-direction: column;
         width: 50%;
         justify-content: space-around;
         align-items: center;
-        height: 240px;
+        height: 80%;
         cursor: pointer;
         @media (width <= 768px) {
           width: 95%;
         }
-        .listTitle {
-          width: 50%;
-          height: 95%;
+        .buyList {
+          width: 100%;
+          height: 250px;
           display: flex;
-          flex-direction: column;
-          align-items: flex-end;
-          justify-content: space-evenly;
-          color: $mainTextColor;
-          @media (width <= 768px) {
+          border-bottom: 2px solid $mainTextColor;
+          .listTitle {
+            width: 80%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            color: $mainTextColor;
+            @media (width <= 768px) {
+            }
           }
-        }
-        .listInfo {
-          width: 50%;
-          height: 100%;
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: space-evenly;
-          color: $mainTextColor;
-          @media (width <= 768px) {
-            align-items: flex-start;
-            margin-left: 20px;
-          }
-          .idColor {
-            cursor: pointer;
-            color: $secColorblue;
+          .listInfo {
+            width: 50%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-evenly;
+            color: $mainTextColor;
+            gap: 12px;
+            @media (width <= 768px) {
+              align-items: flex-start;
+              margin-left: 20px;
+            }
+            .idColor {
+              cursor: pointer;
+              color: $secColorblue;
+            }
           }
         }
       }
