1.fetch orderInsert, created selectedCouDetailId, rename qty to ord_detail_qty 2.update tickets.foreach, update showNextStep, update credit card function prompt 3. delete tickFinished goback test, delete unuse commits 4.update tickInfo zindex

--- a/src/assets/scss/page/ticket.scss
+++ b/src/assets/scss/page/ticket.scss
@@ -631,6 +631,7 @@
         button{ margin: 3vw 0;}
     }
     .tickInfo{
+        z-index: 99;
         overflow: scroll;
         background-color: rgba(0, 0, 0, 70%);
         position: fixed;
