--- a/src/assets/scss/page/ticket.scss
+++ b/src/assets/scss/page/ticket.scss
@@ -633,7 +633,8 @@
     .tickInfo{
         z-index: 99;
         overflow: scroll;
-        background-color: rgba(0, 0, 0, 70%);
+        background-color: rgba(0, 0, 0, 0.5);
+        backdrop-filter: blur(5px);
         position: fixed;
         top: 0;
         left: 0;
