--- a/src/assets/scss/page/park.scss
+++ b/src/assets/scss/page/park.scss
@@ -501,18 +501,13 @@ $time:10s;
         background-size:100% auto;
         display: flex;
         flex-direction: column;
-        justify-content: space-evenly;
         align-items: center;
+        justify-content: center;
         gap: 0.5%;
-        @media (max-width:768px) {
-            width: 320px;
-        }
         @media (max-width:480px) {
             width: 240px;
+            height: 400px;
             top: 1%;
-        }
-        @media (max-width:375px) {
-            width: 280px;
         }
         .pk_Animal_details_content_align{
             width: 90%;
@@ -561,10 +556,7 @@ $time:10s;
         }
         button{
             width: 56.2%;
-            height: 10.9%;
-            @media (max-width:480px) {    
-                height: 8%;
-            } 
+            height: 10%;
         }
     }
     .pk_content_bg{
