--- a/src/assets/scss/layout/CommentLightBox.scss
+++ b/src/assets/scss/layout/CommentLightBox.scss
@@ -188,8 +188,8 @@
         align-items: center;
         width: 100%;
         height: 100vh;
-        backdrop-filter: blur(5px);
-        background-color: rgba(0, 0, 0, 0.3);
+        // backdrop-filter: blur(5px);
+        // background-color: rgba(0, 0, 0, 0.3);
         z-index: 1000;
         @media (width <= 768px) {
             align-items: flex-start;
@@ -574,8 +574,8 @@
         align-items: center;
         width: 100%;
         height: 100vh;
-        backdrop-filter: blur(5px);
-        background-color: rgba(0, 0, 0, 0.3);
+        // backdrop-filter: blur(5px);
+        // background-color: rgba(0, 0, 0, 0.3);
         z-index: 1000;
         @media (width <= 768px) {
             align-items: flex-start;
