alter animaldetail back-to-page, sidebar url

--- a/src/assets/scss/page/animal.scss
+++ b/src/assets/scss/page/animal.scss
@@ -227,6 +227,7 @@
         gap: 5px;
             
         .animaldetail_filter{
+            cursor: pointer;
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
