--- a/src/assets/scss/page/member.scss
+++ b/src/assets/scss/page/member.scss
@@ -480,6 +480,7 @@
           }
           .commentPic {
             z-index: 1;
+            width: 33%;
             height: 70%;
             @media (width <= 768px) {
               height: 60%;
@@ -499,6 +500,7 @@
               color: $mainTextColor;
             }
             .commentText {
+              resize: none;
               line-height: 2vw;
               color: $mainTextColor;
               font-size: $pcFontH4;
