--- a/src/assets/scss/page/member.scss
+++ b/src/assets/scss/page/member.scss
@@ -348,6 +348,18 @@
         overflow: auto;
         justify-content: center;
         align-items: center;
+        &::-webkit-scrollbar {
+          height: 5px;
+          width: 5px;
+        }
+        &::-webkit-scrollbar-track {
+          overflow: hidden;
+        }
+        &::-webkit-scrollbar-thumb {
+          background-color: #ccc;
+          border-radius: 20px;
+          width: 5px;
+        }
         @media (width <= 768px) {
           flex-direction: column;
           width: 100%;
@@ -438,7 +450,7 @@
         @include defaultMemH2();
       }
       .commentGroup {
-        height: auto;
+        height: 500px;
         width: 70%;
         gap: 100px;
         display: flex;
@@ -468,7 +480,7 @@
           justify-content: center;
           gap: 2vw;
           width: 70%;
-          height: 18vw;
+          height: 250px;
           @media (width <= 768px) {
             height: 45vw;
             width: 100%;
@@ -486,13 +498,13 @@
               height: 60%;
             }
           }
-          .commentArea {
+          .commentInnerArea {
             display: flex;
             width: 50%;
-            height: 100%;
+            padding: 35px 0;
             flex-direction: column;
             justify-content: center;
-            row-gap: 3.5vw;
+            row-gap: 3vw;
             z-index: 3;
             @media (width <= 768px) {
             }
@@ -543,6 +555,13 @@
       right: 15vw;
       height: 120px;
       width: 100px;
+      @media (width <= 768px) {
+        height: 100px;
+        width: 70px;
+        right: 75vw;
+        z-index: 20;
+        bottom: -7px;
+      }
     }
   }
 }
