--- a/src/assets/scss/page/animal.scss
+++ b/src/assets/scss/page/animal.scss
@@ -297,7 +297,7 @@
         li{
             height: 3vw; 
             border-top: $bgColorLightgray solid 0.2vw;
-            a{
+            .select_link{
                 display: block;
                 height: 100%;
                 text-align: center;
