update home comment

--- a/src/assets/scss/page/home.scss
+++ b/src/assets/scss/page/home.scss
@@ -2151,7 +2151,7 @@
         overflow: hidden;
       }
       .comment_group {
-        width: 3500px;
+        // width: 3500px;
         padding: 3vw 0;
         
         display: flex;
