--- a/src/assets/scss/layout/CommentLightBox.scss
+++ b/src/assets/scss/layout/CommentLightBox.scss
@@ -15,9 +15,9 @@
     }
     @media (width <= 768px) {
         width: 80%;
-        padding: 12vw 0 25vw 0;
+        padding: 10vw 0 18vw 0;
         // height: 60%;
-        top: 10%;
+        top: 6%;
     }
 
     .close {
@@ -121,12 +121,19 @@
             display: flex;
             display: -webkit-flex;
             justify-content: center;
-            // width: 85%;
             padding-top: 0.85vw;
             text-align: right;
+            @media (width <= 768px) {
+                flex-direction: column;
+                align-items: center;
+            }
             .cropper {
                 width: 250px;
                 height: 180px;
+                @media (width <= 768px) {
+                    width: 200px;
+                    height: 150px;
+                }
             }
             .show-preview {
                 // flex: 1;
@@ -138,21 +145,28 @@
                 width: 250px;
                 height: 180px;
                 margin: 0 3vw;
+                @media (width <= 768px) {
+                    display: none;
+                }
                 
                 .preview {
-                overflow: hidden;
-                border: 1px solid $primaryColorGreen;
-                background: #cccccc;
-                width: 250px;
-                height: 180px;
+                    overflow: hidden;
+                    border: 1px solid $primaryColorGreen;
+                    background: #cccccc;
+                    width: 250px;
+                    height: 180px;
+                    @media (width <= 768px) {
+                        display: none;
+                    }
                 }
             }
             }
-            .footer-btn {
+        .footer-btn {
             // margin-top: 30px;
             display: flex;
             display: -webkit-flex;
             justify-content: flex-end;
+            
             
             .scope-btn {
                 display: flex;
@@ -160,6 +174,10 @@
                 justify-content: space-evenly;
                 flex-direction: column;
                 padding-right: 10px;
+                @media (width <= 768px) {
+                    padding-top: 5vw;
+                    flex-direction: row;
+                }
             }
             .upload-btn {
                 flex: 1;
@@ -189,6 +207,12 @@
                 background-color: #409eff;
                 border-color: #409eff;
                 margin-right: 10px;
+            }
+            .iconBtn{
+                width: 50px;
+                @media (width <= 768px) {
+                    margin: 0 10px;
+                }
             }
         }
 
@@ -292,9 +316,9 @@
     }
     @media (width <= 768px) {
         width: 80%;
-        padding: 43vw 0 53vw 0;
+        padding: 48vw 0 59vw 0;
         // height: 60%;
-        top: 10%;
+        top: 7%;
     }
 
     .close {
@@ -678,9 +702,9 @@
     }
     @media (width <= 768px) {
         width: 80%;
-        padding: 40vw 0 50vw 0;
+        padding: 48vw 0 59vw 0;
         // height: 60%;
-        top: 10%;
+        top: 7%;
     }
 
     .close {
